--- a/cSharpPracticeApp/cSharpPracticeApp.csproj
+++ b/cSharpPracticeApp/cSharpPracticeApp.csproj
@@ -32,6 +32,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>
+    </StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -42,6 +46,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="TestLibrary1">
+      <HintPath>..\..\TestLibrary1\TestLibrary1\bin\Debug\TestLibrary1.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CLASS\keywords.cs" />
@@ -51,6 +58,7 @@
     <Compile Include="CLASS\Print.cs" />
     <Compile Include="OOP\Abstraction.cs" />
     <Compile Include="OOP\Encapsulation.cs" />
+    <Compile Include="OOP\ExtentionMethod.cs" />
     <Compile Include="OOP\Inheritance.cs" />
     <Compile Include="OOP\Interface.cs" />
     <Compile Include="OOP\MultipleInterfaces.cs" />
@@ -64,7 +72,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Mathematics\Mathematics.csproj">
       <Project>{4cc68fd6-6e34-4db3-9959-be4b7b2aee11}</Project>
