--- a/cSharpPracticeApp/cSharpPracticeApp.csproj
+++ b/cSharpPracticeApp/cSharpPracticeApp.csproj
@@ -78,5 +78,8 @@
       <Name>Mathematics</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Collections\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
